# rust-rustlings-ColdRain-Moro

./: Cargo.toml  README.md  temp_46493_ThreadId1.long-type-6053229569296415700.txt
exercises/: quiz1.rs  quiz2.rs
exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
exercises/error_handling/: errors4.rs
exercises/hashmaps/: hashmaps1.rs  hashmaps3.rs
exercises/options/: options1.rs
exercises/standard_library_types/: box1.rs  iterators2.rs  iterators3.rs  iterators5.rs
exercises/structs/: structs1.rs  structs2.rs
exercises/threads/: threads2.rs  threads3.rs
exercises/traits/: traits2.rs
