[package]
name = "rustlings"
version = "5.2.1"
authors = ["Liv <mokou@fastmail.com>", "Carol (Nichols || Goulding) <carol.nichols@gmail.com>"]
edition = "2021"

[dependencies]
argh = "0.1"
indicatif = "0.17.7"
console = "0.15"
notify = "6.1.1"
toml = "0.8.1"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
home = "0.5.3"
glob = "0.3.0"
tokio = { version = "1.21.2", features = ["full"] }

[[bin]]
name = "rustlings"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
glob = "0.3.0"
